read and delete works

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nerdshop Products Overview</title>
+    <title>Products Overview</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
       <section class="section-products">
         <div class="m-table-products">
           <div class="container py-5">
-            <h1>Nerdshop Products Overview</h1>
+            <h1>Products Overview</h1>
             <br/>
             <table class="table table-striped table-products">
               <!-- thead.table-dark>tr>th*7 -->
@@ -106,7 +106,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <p>Do you really want to delete the product (<strong class="strong-code">CODE</strong>) ?</p>
+                  <p>Do you really want to delete the product <strong class="strong-code">{CODE}</strong> ?</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -127,7 +127,7 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="modal-add-edit-label">Modal <span class="span-label">ADD</span></h5>
+                  <h5 class="modal-title" id="modal-add-edit-label"> <span class="span-label">ADD</span></h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form class="form-add-edit" method="post">
