--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
                       <div class="col-6">
                         <div class="mb-3">
                           <label class="form-label" for="input-id">id</label>
-                          <input type="text" class="form-control" name="id" id="input-id" />
+                          <input type="text" class="form-control" name="id" id="input-id" readonly/>
                         </div>
                       </div>
                     </div>
