--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js" defer></script>
   </head>
@@ -21,9 +19,7 @@
         <div class="m-table-products">
           <div class="container py-5">
             <h1>Products Overview</h1>
-            <br/>
             <table class="table table-striped table-products">
-              <!-- thead.table-dark>tr>th*7 -->
               <thead class="table-dark">
                 <tr>
                   <th>ID</th>
@@ -31,26 +27,17 @@
                   <th>Description</th>
                   <th>Quantity</th>
                   <th>Price €</th>
-                  <th>Stockwarn</th>
-                  <th>#</th>
+                  <th>Actions</th>
                 </tr>
               </thead>
               <tbody>
                 <template class="row-product">
                   <tr>
-                    <td class="td-id">id</td>
+                    <td class="td-id"></td>
                     <td class="td-productname"></td>
                     <td class="td-description"></td>
                     <td class="td-quantity"></td>
                     <td class="td-price"><span class="span-price"></span></td>
-                    <td class="td-stockwarn">
-                      <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="cb-product-1" disabled />
-                        <label class="form-check-label" for="cb-product-1"
-                          ><span class="visually-hidden"></span></label
-                        >
-                      </div>
-                    </td>
                     <td class="td-actions">
                       <button
                         class="btn btn-primary btn-sm button-edit"
@@ -102,11 +89,11 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="modal-delete-label">Modal Delete</h1>
+                  <h1 class="modal-title fs-5" id="modal-delete-label">Delete Product</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <p>Do you really want to delete the product <strong class="strong-code">{CODE}</strong> ?</p>
+                  <p>Do you really want to delete product <strong class="strong-code">ID</strong> ?</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
